Se creó con Colab

--- a/Codigos_Simulacion/Hopping_Hoop_Simulacion.ipynb
+++ b/Codigos_Simulacion/Hopping_Hoop_Simulacion.ipynb
@@ -1,1 +1,119 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# \ud83e\uddea Simulaci\u00f3n del experimento *Hopping Hoop*\n", "Este cuaderno fue creado para analizar y simular el experimento del aro saltar\u00edn (*Hopping Hoop*), basado en la adici\u00f3n de masas extra a un disco que rueda sobre una superficie.\n", "**Autor:** Chispas \ud83d\udca5  \n", "**Fecha de creaci\u00f3n:** 2025-06-05\n", "---"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## \ud83c\udfaf Objetivo del experimento\n", "- Analizar los saltos de un aro al que se le a\u00f1ade una masa extra.\n", "- Predecir el n\u00famero de saltos seg\u00fan la masa colocada.\n", "- Determinar los rangos cr\u00edticos de masa para obtener 0, 1, 2 o m\u00e1s saltos.\n", "\n", "### \ud83d\udcd0 Par\u00e1metros conocidos\n", "- Masa del aro: `0.124 kg`\n", "- Radio del aro: `0.14 m`\n", "- Masa de salto 1: `0.051 kg`\n", "- Masa de salto 2: `0.066 kg`"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# \ud83d\udd0d Simulaci\u00f3n de saltos basada en masa a\u00f1adida\n", "def hopping_hoop_jumps(m_extra):\n", "    min_salto_1 = 0.051\n", "    max_salto_1 = 0.058\n", "    min_salto_2 = 0.059\n", "    max_salto_2 = 0.074\n", "    min_salto_3 = 0.075\n", "    max_salto_3 = 0.09\n", "\n", "    if m_extra < min_salto_1:\n", "        return 0, f\"\u274c Masa insuficiente (< {min_salto_1:.3f} kg) para salto\"\n", "    elif min_salto_1 <= m_extra <= max_salto_1:\n", "        return 1, f\"\u2705 1 salto: entre {min_salto_1:.3f} kg y {max_salto_1:.3f} kg\"\n", "    elif min_salto_2 <= m_extra <= max_salto_2:\n", "        return 2, f\"\u2705\u2705 2 saltos: entre {min_salto_2:.3f} kg y {max_salto_2:.3f} kg\"\n", "    elif min_salto_3 <= m_extra <= max_salto_3:\n", "        return 3, f\"\u26a0\ufe0f 3 saltos posibles (experimental extremo): {min_salto_3:.3f} kg a {max_salto_3:.3f} kg\"\n", "    else:\n", "        return 0, f\"\u274c Masa excesiva (> {max_salto_3:.3f} kg); no hay salto o se colapsa el sistema\""]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# \u2699\ufe0f Ejecuta la simulaci\u00f3n ingresando la masa adicional en kg\n", "masa_adicional = float(input(\"\ud83d\udd22 Ingresa la masa adicional (kg): \"))\n", "saltos, info = hopping_hoop_jumps(masa_adicional)\n", "print(f\"\\n\ud83c\udfac Resultado: {saltos} salto(s)\")\n", "print(f\"\ud83d\udccc Info: {info}\")"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## \ud83d\udcce (Opcional) Subida y lectura de archivos `.trk`\n", "Puedes expandir este cuaderno para subir tu archivo experimental generado por Tracker y analizarlo.\n", "Aqu\u00ed te dejamos la celda b\u00e1sica para subir el archivo:"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["from google.colab import files\n", "uploaded = files.upload()\n", "\n", "# Luego podr\u00edas usar ElementTree para parsear tu archivo .trk si es necesario."]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"name": "python", "version": "3.10"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M9pf-nRP5YtI"
+      },
+      "source": [
+        "# 🧪 Simulación del experimento *Hopping Hoop*\n",
+        "Este cuaderno fue creado para analizar y simular el experimento del aro saltarín (*Hopping Hoop*), basado en la adición de masas extra a un disco que rueda sobre una superficie.\n",
+        "**Fecha de creación:** 2025-06-05\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NU1lPuzR5YtK"
+      },
+      "source": [
+        "## 🎯 Objetivo del experimento\n",
+        "- Analizar los saltos de un aro al que se le añade una masa extra.\n",
+        "- Predecir el número de saltos según la masa colocada.\n",
+        "- Determinar los rangos críticos de masa para obtener 0, 1, 2 o más saltos.\n",
+        "\n",
+        "### 📐 Parámetros conocidos\n",
+        "- Masa del aro: `0.124 kg`\n",
+        "- Radio del aro: `0.14 m`\n",
+        "- Masa de salto 1: `0.051 kg`\n",
+        "- Masa de salto 2: `0.066 kg`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "2Se99Pe65YtK"
+      },
+      "outputs": [],
+      "source": [
+        "# 🔍 Simulación de saltos basada en masa añadida\n",
+        "def hopping_hoop_jumps(m_extra):\n",
+        "    min_salto_1 = 0.051\n",
+        "    max_salto_1 = 0.058\n",
+        "    min_salto_2 = 0.059\n",
+        "    max_salto_2 = 0.074\n",
+        "    min_salto_3 = 0.075\n",
+        "    max_salto_3 = 0.09\n",
+        "\n",
+        "    if m_extra < min_salto_1:\n",
+        "        return 0, f\"❌ Masa insuficiente (< {min_salto_1:.3f} kg) para salto\"\n",
+        "    elif min_salto_1 <= m_extra <= max_salto_1:\n",
+        "        return 1, f\"✅ 1 salto: entre {min_salto_1:.3f} kg y {max_salto_1:.3f} kg\"\n",
+        "    elif min_salto_2 <= m_extra <= max_salto_2:\n",
+        "        return 2, f\"✅✅ 2 saltos: entre {min_salto_2:.3f} kg y {max_salto_2:.3f} kg\"\n",
+        "    elif min_salto_3 <= m_extra <= max_salto_3:\n",
+        "        return 3, f\"⚠️ 3 saltos posibles (experimental extremo): {min_salto_3:.3f} kg a {max_salto_3:.3f} kg\"\n",
+        "    else:\n",
+        "        return 0, f\"❌ Masa excesiva (> {max_salto_3:.3f} kg); no hay salto o se colapsa el sistema\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "gq5ji71s5YtN"
+      },
+      "outputs": [],
+      "source": [
+        "# ⚙️ Ejecuta la simulación ingresando la masa adicional en kg\n",
+        "masa_adicional = float(input(\"🔢 Ingresa la masa adicional (kg): \"))\n",
+        "saltos, info = hopping_hoop_jumps(masa_adicional)\n",
+        "print(f\"\\n🎬 Resultado: {saltos} salto(s)\")\n",
+        "print(f\"📌 Info: {info}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z3DNnQ-Z5YtO"
+      },
+      "source": [
+        "## 📎 (Opcional) Subida y lectura de archivos `.trk`\n",
+        "Puedes expandir este cuaderno para subir tu archivo experimental generado por Tracker y analizarlo.\n",
+        "Aquí te dejamos la celda básica para subir el archivo:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "SOYGE_As5YtP"
+      },
+      "outputs": [],
+      "source": [
+        "from google.colab import files\n",
+        "uploaded = files.upload()\n",
+        "\n",
+        "# Luego podrías usar ElementTree para parsear tu archivo .trk si es necesario."
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10"
+    },
+    "colab": {
+      "provenance": []
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
